@@ -13,7 +13,6 @@ PASS location.protocol == "LEFTOVER" is false
 PASS location.reload == "LEFTOVER" is false
 PASS location.replace == "LEFTOVER" is false
 PASS location.search == "LEFTOVER" is false
-PASS location.toString == "LEFTOVER" is false
 PASS locationbar.visible == "LEFTOVER" is false
 PASS menubar.visible == "LEFTOVER" is false
 PASS personalbar.visible == "LEFTOVER" is false
