@@ -947,7 +947,6 @@ window.location.protocol [string]
 window.location.reload [function]
 window.location.replace [function]
 window.location.search [string]
-window.location.toString [function]
 window.locationbar [object BarInfo]
 window.locationbar.visible [boolean]
 window.log [function]
@@ -1058,6 +1057,5 @@ window.getSelection().rangeCount [number]
 window.getSelection().removeAllRanges [function]
 window.getSelection().setBaseAndExtent [function]
 window.getSelection().setPosition [function]
-window.getSelection().toString [function]
 window.getSelection().type [string]
 
