@@ -603,6 +603,7 @@ sub GenerateImplementation
 
             my @specials = ();
             push(@specials, "DontDelete") unless $attribute->signature->extendedAttributes->{"Deletable"};
+            push(@specials, "DontEnum") if $attribute->signature->extendedAttributes->{"DontEnum"};
             push(@specials, "ReadOnly") if $attribute->type =~ /readonly/;
             my $special = (@specials > 0) ? join("|", @specials) : "0";
             push(@hashSpecials, $special);
@@ -692,6 +693,7 @@ sub GenerateImplementation
 
         my @specials = ();
         push(@specials, "DontDelete") unless $function->signature->extendedAttributes->{"Deletable"};
+        push(@specials, "DontEnum") if $function->signature->extendedAttributes->{"DontEnum"};
         push(@specials, "Function");        
         my $special = (@specials > 0) ? join("|", @specials) : "0";
         push(@hashSpecials, $special);
