@@ -48,7 +48,7 @@ module html {
         readonly attribute DOMString text;
 
 #if defined(LANGUAGE_JAVASCRIPT)
-        DOMString toString();
+        [DontEnum] DOMString toString();
 #endif
 
 #if defined(LANGUAGE_OBJECTIVE_C)
